  and to return xp::null() if NULL is given
  (friebe)

RFCs
~~~~
- Implemented RFC #0152: Arguments vs. Parameters
  (friebe)
- Implemented RFC #0153: HTTP protocol versions
  (friebe)
- Implemented RFC #0151: Runtime class
  (friebe)
- Implemented RFC #0150: Before and after methods for testcases
  (friebe)
- Implemented RFC #0010: Type casts
  (friebe)

Bugfixes
~~~~~~~~
- Added "static" keyword to System::putEnv() und System::getEnv()
  (hinckel)
- Ensured arguments passed to XSL callbacks are utf8_decode()d and return 
  values are utf8_encode()d
  (friebe)
- Fixed peer.ftp.FtpFile not reloading file details (size, date, permissions,
  ...) after a successfull upload
  (friebe)
- Fixed peer.ftp.FtpDir::findEntry() 
  (gellweiler, kiesel)
- Fixed FTP server API to parse parameters to NLST correctly and report
  directories as single entities if "-d" is given in NLST and LIST
  (gellweiler, friebe)
- Fixed lang.reflect.Proxy to add type hints to generated methods
  (friebe)

Features
~~~~~~~~
- Added "-cp" command line option to xpcli which will add XAR files and
  directories given to it to the classpath
  (friebe)
- Added lang.ClassLoader::registerPath() method
  (friebe)
- Added util.collections.Vector::addAll() method
  (friebe)
- Added optional parameter "hinted" to lang.reflect.Argument::getType()
  with which one can retrieve the type hint's type name.
  (friebe)
- Added lang.reflect.Argument::getDefaultValue() method. In contrast to 
  getDefault() it returns the value as-is (not as a string)
  (friebe)


Version 5.6.4, released 2007-12-25
----------------------------------
SVN version: 11651

Heads up!
~~~~~~~~~
- Removed deprecated rdbms.Criteria::newInstance() method
  (friebe)
- Removed deprecated lang.reflect.Routine::returnsReference() method
  (friebe)
- Refactored unittest.TestSuite/unittest.TestCase for added listener API.
  With these changes, test cases cannot be run on their own but must always